@@ -1814,3 +1814,15 @@ int32_t SPVM__Sys__IO__Constant__AT_EACCESS(SPVM_ENV* env, SPVM_VALUE* stack) {
 #endif
 
 }
+
+int32_t SPVM__Sys__IO__Constant__FD_SETSIZE(SPVM_ENV* env, SPVM_VALUE* stack) {
+
+#ifdef FD_SETSIZE
+  stack[0].ival = FD_SETSIZE;
+  return 0;
+#else
+  env->die(env, stack, "FD_SETSIZE is not defined on this system", FILE_NAME, __LINE__);
+  return SPVM_NATIVE_C_CLASS_ID_ERROR_NOT_SUPPORTED;
+#endif
+
+}
